--- a/thesis_master.tex
+++ b/thesis_master.tex
@@ -57,7 +57,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
 \begin{document}
-\setcounter{page}{7}
+%\setcounter{page}{7}
 
 \input{Chapters/00_frontmatter.tex}
 
@@ -73,7 +73,7 @@
 %\input{Chapters/03_cryptic_exons.tex}
 %\input{Chapters/04_fus_mice.tex}
 %\input{Chapters/05_tdp_mice.tex}
-\input{Chapters/06_fus_meta.tex}
+%\input{Chapters/06_fus_meta.tex}
 %\input{Chapters/discussion.tex}
 
 
