working on discussion

--- a/Bibliography/thesis_references.bib
+++ b/Bibliography/thesis_references.bib
@@ -4430,7 +4430,7 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	number = {11},
 	pages = {e99645},
 	pmid = {29769403},
-	title = {{Unmasking the skiptic task of TDP‐43}},
+	title = {{Unmasking the skiptic task of TDP-43}},
 	url = {http://emboj.embopress.org/lookup/doi/10.15252/embj.201899645},
 	volume = {37},
 	year = {2018}
