--- a/thesis_master.tex
+++ b/thesis_master.tex
@@ -57,11 +57,10 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
 \begin{document}
-%\setcounter{page}{7}
+
 
 \input{Chapters/00_frontmatter.tex}
 
-\pagenumbering{arabic} % Switch to normal numbers
 
 % ACKNOWLEGEMENTS
 \clearpage
@@ -74,7 +73,7 @@
 %\input{Chapters/04_fus_mice.tex}
 %\input{Chapters/05_tdp_mice.tex}
 %\input{Chapters/06_fus_meta.tex}
-%\input{Chapters/discussion.tex}
+%\input{Chapters/07_discussion.tex}
 
 
 
