--- a/thesis_full.tex
+++ b/thesis_full.tex
@@ -74,7 +74,7 @@
 \input{Chapters/04_fus_mice.tex}
 \input{Chapters/05_tdp_mice.tex}
 \input{Chapters/06_fus_meta.tex}
-\input{Chapters/discussion.tex}
+\input{Chapters/07_discussion.tex}
 
 
 
