--- a/thesis_master.tex
+++ b/thesis_master.tex
@@ -67,13 +67,13 @@
 %\input{Chapters/99_acknowledgements.tex}
 
 % CONTENT
-%\input{Chapters/01_introduction.tex}
+\input{Chapters/01_introduction.tex}
 %\input{Chapters/02_methods.tex}
 %\input{Chapters/03_cryptic_exons.tex}
 %\input{Chapters/04_fus_mice.tex}
 %\input{Chapters/05_tdp_mice.tex}
 %\input{Chapters/06_fus_meta.tex}
-%\input{Chapters/07_discussion.tex}
+\input{Chapters/07_discussion.tex}
 
 
 
