added more stuff

--- a/Bibliography/thesis_references.bib
+++ b/Bibliography/thesis_references.bib
@@ -12,6 +12,38 @@
 	year = {2018}
 }
 
+@article{McClory2018,
+	abstract = {The fidelity of RNA splicing is regulated by a network of splicing enhancers and repressors, although the rules that govern this process are not yet fully understood. One mechanism that contributes to splicing fidelity is the repression of nonconserved cryptic exons by splicing factors that recognize dinucleotide repeats. We previously identified that TDP-43 and PTBP1/PTBP2 are capable of repressing cryptic exons utilizing UG and CU repeats, respectively. Here we demonstrate that hnRNP L (HNRNPL) also represses cryptic exons by utilizing exonic CA repeats, particularly near the 5'SS. We hypothesize that hnRNP L regulates CA repeat repression for both cryptic exon repression and developmental processes such as T cell differentiation.},
+	author = {McClory, Sean P. and Lynch, Kristen W. and Ling, Jonathan P.},
+	doi = {10.1261/rna.065508.117},
+	file = {:Users/jack/Downloads/Papers/mcclory2018.pdf:pdf},
+	issn = {14699001},
+	journal = {Rna},
+	keywords = {Alternative splicing,Cryptic exons,Dinucleotide repeats,HNRNPL,HnRNP L},
+	number = {6},
+	pages = {761--768},
+	pmid = {29581412},
+	title = {{HnRNP L represses cryptic exons}},
+	volume = {24},
+	year = {2018}
+}
+
+@article{Jeong2017,
+	author = {Jeong, Yun Ha and Ling, Jonathan P. and Lin, Sophie Z. and Donde, Aneesh N. and Braunstein, Kerstin E. and Majounie, Elisa and Traynor, Bryan J. and LaClair, Katherine D. and Lloyd, Thomas E. and Wong, Philip C.},
+	doi = {10.1186/s13024-016-0144-x},
+	file = {:Users/jack/Library/Application Support/Mendeley Desktop/Downloaded/Jeong et al. - 2017 - Tdp-43 cryptic exons are highly variable between cell types.pdf:pdf},
+	issn = {1750-1326},
+	journal = {Molecular Neurodegeneration},
+	keywords = {TDP-43 –Nonconserved cryptic exons,Bioinformatics,,amyotrophic lateral sclerosis,bioinformatics,dementia,frontotemporal,inclusion body myositis,nonconserved cryptic exons,tdp-43},
+	number = {1},
+	pages = {13},
+	publisher = {Molecular Neurodegeneration},
+	title = {{Tdp-43 cryptic exons are highly variable between cell types}},
+	url = {http://molecularneurodegeneration.biomedcentral.com/articles/10.1186/s13024-016-0144-x},
+	volume = {12},
+	year = {2017}
+}
+
 @article{Stamm2000,
 	abstract = {Chemosensory systems play vital roles in the lives of most mammals, including the detection and identification of predators, as well as sex and reproductive status and the identification of individual conspecifics. All of these capabilities require a process of recognition involving a combination of innate (kairomonal/pheromonal) and learned responses. Across very different phylogenies, the mechanisms for pheromonal and odour learning have much in common. They are frequently associated with plasticity of GABA-ergic feedback at the initial level of processing the chemosensory information, which enhances its pattern separation capability. Association of odourant features into an odour object primarily involves anterior piriform cortex for non-social odours. However, the medial amygdala appears to be involved in both the recognition of social odours and their association with chemosensory information sensed by the vomeronasal system. Unusually not only the sensory neurons themselves, but also the GABA-ergic interneurons in the olfactory bulb are continually being replaced, with implications for the induction and maintenance of learned chemosensory responses.},
 	author = {Stamm, Stefan and Zhu, Jian and Nakai, Kenta and Stoilov, Peter and Stoss, Oliver and Zhang, Michael Q.},
