added acknowledgements to frontmatter

--- a/Bibliography/thesis_references.bib
+++ b/Bibliography/thesis_references.bib
@@ -11,7 +11,39 @@
 	title = {{Mice with endogenous TDP-43 mutations exhibit gain of splicing function and characteristics of amyotrophic lateral sclerosis}},
 	year = {2018}
 }
+@article{Tilgner2015,
+	abstract = {Alternative splicing shapes mammalian transcriptomes, with many RNA molecules undergoing multiple distant alternative splicing events. Comprehensive transcriptome analysis, including analysis of exon co-association in the same molecule, requires deep, long-read sequencing. Here we introduce an RNA sequencing method, synthetic long-read RNA sequencing (SLR-RNA-seq), in which small pools ([le]1,000 molecules/pool, [le]1 molecule/gene for most genes) of full-length cDNAs are amplified, fragmented and short-read-sequenced. We demonstrate that these RNA sequences reconstructed from the short reads from each of the pools are mostly close to full length and contain few insertion and deletion errors. We report many previously undescribed isoforms (human brain: [sim]13,800 affected genes, 14.5{\%} of molecules; mouse brain [sim]8,600 genes, 18{\%} of molecules) and up to 165 human distant molecularly associated exon pairs (dMAPs) and distant molecularly and mutually exclusive pairs (dMEPs). Of 16 associated pairs detected in the mouse brain, 9 are conserved in human. Our results indicate conserved mechanisms that can produce distant but phased features on transcript and proteome isoforms.},
+	author = {Tilgner, Hagen and Jahanbani, Fereshteh and Blauwkamp, Tim and Moshrefi, Ali and Jaeger, Erich and Chen, Feng and Harel, Itamar and Bustamante, Carlos D. and Rasmussen, Morten and Snyder, Michael P.},
+	doi = {10.1038/nbt.3242},
+	file = {:Users/jack/Downloads/Papers/tilgner2015.pdf:pdf},
+	isbn = {1546-1696 (Electronic)$\backslash$r1087-0156 (Linking)},
+	issn = {15461696},
+	journal = {Nature Biotechnology},
+	number = {7},
+	pages = {736--742},
+	pmid = {25985263},
+	title = {{Comprehensive transcriptome analysis using synthetic long-read sequencing reveals molecular co-association of distant splicing events}},
+	volume = {33},
+	year = {2015}
+}
 
+@article{Luisier2018,
+	abstract = {Mutations causing amyotrophic lateral sclerosis (ALS) strongly implicate ubiquitously expressed regulators of RNA processing. To understand the molecular impact of ALS-causing mutations on neuronal development and disease, we analysed transcriptomes during in vitro differentiation of motor neurons (MNs) from human control and patient-specific VCP mutant induced-pluripotent stem cells (iPSCs). We identify increased intron retention (IR) as a dominant feature of the splicing programme during early neural differentiation. Importantly, IR occurs prematurely in VCP mutant cultures compared with control counterparts. These aberrant IR events are also seen in independent RNAseq data sets from SOD1- and FUS-mutant MNs. The most significant IR is seen in the SFPQ transcript. The SFPQ protein binds extensively to its retained intron, exhibits lower nuclear abundance in VCP mutant cultures and is lost from nuclei of MNs in mouse models and human sporadic ALS. Collectively, we demonstrate SFPQ IR and nuclear loss as molecular hallmarks of familial and sporadic ALS.},
+	author = {Luisier, Raphaelle and Tyzack, Giulia E. and Hall, Claire E. and Mitchell, Jamie S. and Devine, Helen and Taha, Doaa M. and Malik, Bilal and Meyer, Ione and Greensmith, Linda and Newcombe, Jia and Ule, Jernej and Luscombe, Nicholas M. and Patani, Rickie},
+	doi = {10.1038/s41467-018-04373-8},
+	file = {:Users/jack/Downloads/s41467-018-04373-8.pdf:pdf},
+	isbn = {4146701804373},
+	issn = {2041-1723},
+	journal = {Nature Communications},
+	keywords = {Alternative splicing,Induced pluripotent stem cells,Neural stem cells,Neurology,Pathogenesis},
+	number = {1},
+	pages = {2010},
+	publisher = {Springer US},
+	title = {{Intron retention and nuclear loss of SFPQ are molecular hallmarks of ALS}},
+	url = {http://www.nature.com/articles/s41467-018-04373-8},
+	volume = {9},
+	year = {2018}
+}
 @article{McClory2018,
 	abstract = {The fidelity of RNA splicing is regulated by a network of splicing enhancers and repressors, although the rules that govern this process are not yet fully understood. One mechanism that contributes to splicing fidelity is the repression of nonconserved cryptic exons by splicing factors that recognize dinucleotide repeats. We previously identified that TDP-43 and PTBP1/PTBP2 are capable of repressing cryptic exons utilizing UG and CU repeats, respectively. Here we demonstrate that hnRNP L (HNRNPL) also represses cryptic exons by utilizing exonic CA repeats, particularly near the 5'SS. We hypothesize that hnRNP L regulates CA repeat repression for both cryptic exon repression and developmental processes such as T cell differentiation.},
 	author = {McClory, Sean P. and Lynch, Kristen W. and Ling, Jonathan P.},
@@ -5293,8 +5325,11 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 @article{Jangi2014,
 	author = {Jangi, Mohini and Boutz, Paul L and Paul, Prakriti and Sharp, Phillip A},
 	doi = {10.1101/gad.235770.113},
-	file = {:Users/Jack/Downloads/Genes Dev.-2014-Jangi-637-51.pdf:pdf},
+	file = {:Users/jack/Library/Application Support/Mendeley Desktop/Downloaded/Jangi et al. - 2014 - Rbfox2 controls autoregulation in RNA-binding protein networks Rbfox2 controls autoregulation in RNA-binding prote.pdf:pdf},
+	journal = {Genes and Development},
 	keywords = {2013,2014,30,alternative pre-mrna splicing is,alternative splicing,embryonic stem cell,essential for the,for this article,iclip,nonsense-mediated decay,rbfox,received december 2,revised version accepted january,rna-binding protein,supplemental material is available},
+	volume = {28},
+	issue = {6},
 	pages = {637--651},
 	title = {{Rbfox2 controls autoregulation in RNA-binding protein networks Rbfox2 controls autoregulation in RNA-binding protein networks}},
 	year = {2014}
