--- a/thesis_master.tex
+++ b/thesis_master.tex
@@ -81,9 +81,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
 \begin{document}
 
-
+% FRONT MATTER
 \input{Chapters/00_frontmatter.tex}
-
 
 % ACKNOWLEGEMENTS
 \clearpage
@@ -96,7 +95,8 @@
 \fancyhead[RO]{\textsl{\rightmark}}
 
 % CONTENT
-\input{Chapters/01_introduction.tex}
+
+%\input{Chapters/01_introduction.tex}
 %\input{Chapters/02_methods.tex}
 %\input{Chapters/03_cryptic_exons.tex}
 %\input{Chapters/04_fus_mice.tex}
@@ -114,7 +114,8 @@
 % APPENDICES!!!
 
 %\input{Chapters/appendices.tex}
-% leave out for github
+
+% PUBLICATIONS - leave out for github
 %\input{Chapters/publications.tex}
 
 \cleardoublepage
