--- a/Bibliography/thesis_references.bib
+++ b/Bibliography/thesis_references.bib
@@ -4244,6 +4244,102 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	title = {{LeafCutter : Annotation-free quantification of RNA splicing}},
 	year = {2016}
 }
+@article{Trincado2018,
+	abstract = {We examine risk preferences in an urban setting in a low-income developing country with nonstudent subjects by adapting the experimental approach of Holt and Laury (HL; 2002).We conducted 22 group experiments with 404 participants and used in-kind payoffs. The average respondent was ‘risk- averse' (the midpoint of Constant Relative Risk Aversion (CRRA)intervals among participants was 0.53, roughly in line with most similar studies in poor countries). Like most other studies, we find weak correlations between risk aversion and most socio-economic characteristics. Importantly, a sizeable minority had difficulty understanding the experiment, and participants were influenced by the context in which the experiments occurred (these problems are not unique to our study). Our article adds to a growing literature that suggests that risk aversion elicitation approaches are sensitive to context and cognitive abilities of participants.},
+	author = {Trincado, Juan L. and Entizne, Juan C. and Hysenaj, Gerald and Singh, Babita and Skalic, Miha and Elliott, David J. and Eyras, Eduardo},
+	doi = {10.1186/s13059-018-1417-1},
+	file = {:Users/jack/Downloads/Papers/s13059-018-1417-1.pdf:pdf},
+	isbn = {0278-2391 (Print)$\backslash$r0278-2391 (Linking)},
+	issn = {1474760X},
+	journal = {Genome Biology},
+	keywords = {Alternative splicing,Biological variability,Differential splicing,Differentiation,RNA-seq,Uncertainty},
+	number = {1},
+	pages = {1--11},
+	pmid = {29571299},
+	publisher = {Genome Biology},
+	title = {{SUPPA2: Fast, accurate, and uncertainty-aware differential splicing analysis across multiple conditions}},
+	volume = {19},
+	year = {2018}
+}
+
+@article{Li2018,
+	abstract = {The excision of introns from pre-mRNA is an essential step in mRNA processing. We developed LeafCutter to study sample and population variation in intron splicing. LeafCutter identifies variable splicing events from short-read RNA-seq data and finds events of high complexity. Our approach obviates the need for transcript annotations and circumvents the challenges in estimating relative isoform or exon usage in complex splicing events. LeafCutter can be used both to detect differential splicing between sample groups and to map splicing quantitative trait loci (sQTLs). Compared with contemporary methods, our approach identified 1.4–2.1 times more sQTLs, many of which helped us ascribe molecular effects to disease-associated variants. Transcriptome-wide associations between LeafCutter intron quantifications and 40 complex traits increased the number of associated disease genes at a 5{\%} false discovery rate by an average of 2.1-fold compared with that detected through the use of gene expression levels alone. LeafCutter is fast, scalable, easy to use, and available online.},
+	author = {Li, Yang I. and Knowles, David A. and Humphrey, Jack and Barbeira, Alvaro N. and Dickinson, Scott P. and Im, Hae Kyung and Pritchard, Jonathan K.},
+	doi = {10.1038/s41588-017-0004-9},
+	file = {:Users/jack/Downloads/Papers/li2018.pdf:pdf},
+	isbn = {1061-4036},
+	issn = {15461718},
+	journal = {Nature Genetics},
+	number = {1},
+	pages = {151--158},
+	pmid = {29229983},
+	publisher = {Springer US},
+	title = {{Annotation-free quantification of RNA splicing using LeafCutter}},
+	url = {http://dx.doi.org/10.1038/s41588-017-0004-9},
+	volume = {50},
+	year = {2018}
+}
+
+@article{Vaquero-Garcia2018,
+	abstract = {In a recent publication, Li et al introduced LeafCutter, a new method for detecting and quantifying differential splicing of RNA from RNASeq data. In this work, Li et al first compared LeafCutter to existing methods, then used it for a study of splicing variations and sQTL analysis from a large set of GTEx samples. While the study was elaborate and comprehensive, we want to highlight several issues with the comparative analysis performed by Li et al. We argue these issues created an inaccurate and misleading representation of other tools, namely MAJIQ and rMATS. More broadly, we believe the points we raise regarding the comparative analysis by Li et al are representative of general issues we all, as authors, editors, and reviewers, are faced with and must address in the current times of fast-paced genomics and computational research.},
+	author = {Vaquero-Garcia, Jorge and Norton, Scott and Barash, Yoseph},
+	doi = {10.1101/463927},
+	file = {:Users/jack/Downloads/Papers/463927.full.pdf:pdf},
+	journal = {bioRxiv},
+	pages = {463927},
+	title = {{LeafCutter vs. MAJIQ and comparing software in the fast-moving field of genomics}},
+	url = {https://www.biorxiv.org/content/early/2018/11/08/463927},
+	year = {2018}
+}
+
+
+@article{Nagy1998,
+	abstract = {`Time, that takes survey of all the world, Must have a stop.' Shakespeare, Henry IV, Part One},
+	author = {Nagy, Eszter and Maquat, Lynne E.},
+	doi = {10.1016/S0968-0004(98)01208-0},
+	file = {:Users/jack/Downloads/Papers/1-s2.0-S0968000498012080-main.pdf:pdf},
+	isbn = {09680004},
+	issn = {09680004},
+	journal = {Trends in Biochemical Sciences},
+	number = {6},
+	pages = {198--199},
+	pmid = {9644970},
+	title = {{A rule for termination-codon position within intron-containing genes: When nonsense affects RNA abundance}},
+	volume = {23},
+	year = {1998}
+}
+@article{Losson1979,
+	author = {Losson, Regine and Lacroute, Francois},
+	doi = {10.1073/PNAS.76.10.5134},
+	file = {:Users/jack/Downloads/Papers/5134.full.pdf:pdf},
+	issn = {0027-8424},
+	journal = {Proc. Natl. Acad. Sci. USA},
+	number = {10},
+	pages = {5134--5137},
+	pmid = {388431},
+	title = {{Interference of nonsense mutations with eukaryotic messenger}},
+	volume = {76},
+	year = {1979}
+}
+
+@article{Afroz2017,
+	abstract = {TDP-43 is a primarily nuclear RNA-binding protein, whose abnormal phosphorylation and cytoplasmic aggregation characterizes affected neurons in patients with amyotrophic lateral sclerosis and frontotemporal dementia. Here, we report that physiological nuclear TDP-43 in mouse and human brain forms homo-oligomers that are resistant to cellular stress. Physiological TDP-43 oligomerization is mediated by its N-terminal domain, which can adopt dynamic, solenoid-like structures, as revealed by a 2.1 {\AA} crystal structure in combination with nuclear magnetic resonance spectroscopy and electron microscopy. These head-to-tail TDP-43 oligomers are unique among known RNA-binding proteins and represent the functional form of the protein in vivo, since their destabilization results in loss of alternative splicing regulation of known neuronal RNA targets. Our findings indicate that N-terminal domain-driven oligomerization spatially separates the adjoining highly aggregation-prone, C-terminal low-complexity domains of consecutive TDP-43 monomers, thereby preventing low-complexity domain inter-molecular interactions and antagonizing the formation of pathologic aggregates.},
+	author = {Afroz, Tariq and Hock, Eva Maria and Ernst, Patrick and Foglieni, Chiara and Jambeau, Melanie and Gilhespy, Larissa A.B. and Laferriere, Florent and Maniecka, Zuzanna and Pl{\"{u}}ckthun, Andreas and Mittl, Peer and Paganetti, Paolo and Allain, Fr{\'{e}}d{\'{e}}ric H.T. and Polymenidou, Magdalini},
+	doi = {10.1038/s41467-017-00062-0},
+	file = {:Users/jack/Downloads/Papers/afroz2017.pdf:pdf},
+	isbn = {2041-1723 (Electronic)
+	2041-1723 (Linking)},
+	issn = {20411723},
+	journal = {Nature Communications},
+	number = {1},
+	pages = {1--14},
+	pmid = {28663553},
+	publisher = {Springer US},
+	title = {{Functional and dynamic polymerization of the ALS-linked protein TDP-43 antagonizes its pathologic aggregation}},
+	url = {http://dx.doi.org/10.1038/s41467-017-00062-0},
+	volume = {8},
+	year = {2017}
+}
 @article{Trapnell2012,
 	abstract = {Recent advances in high-throughput cDNA sequencing (RNA-seq) can reveal new genes and splice variants and quantify expression genome-wide in a single assay. The volume and complexity of data from RNA-seq experiments necessitate scalable, fast and mathematically principled analysis software. TopHat and Cufflinks are free, open-source software tools for gene discovery and comprehensive expression analysis of high-throughput mRNA sequencing (RNA-seq) data. Together, they allow biologists to identify new genes and new splice variants of known ones, as well as compare gene and transcript expression under two or more conditions. This protocol describes in detail how to use TopHat and Cufflinks to perform such analyses. It also covers several accessory tools and utilities that aid in managing data, including CummeRbund, a tool for visualizing RNA-seq analysis results. Although the procedure assumes basic informatics skills, these tools assume little to no background with RNA-seq analysis and are meant for novices and experts alike. The protocol begins with raw sequencing reads and produces a transcriptome assembly, lists of differentially expressed and regulated genes and transcripts, and publication-quality visualizations of analysis results. The protocol's execution time depends on the volume of transcriptome sequencing data and available computing resources but takes less than 1 d of computer time for typical experiments and ∼1 h of hands-on time.},
 	archivePrefix = {arXiv},
@@ -5237,6 +5333,39 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	volume = {174},
 	year = {2018}
 }
+
+@article{Tarn1996,
+	abstract = {A minor class of introns with noncanonical splice (AT-Ac) and branch site sequences exists in metazoan protein coding genes. We have established a HeLa cell in vitro system that accurately splices a pre-mRNA substrate containing such an intron from the human P120 gene. Splicing occurs via a lariat intermediate whose branch site A residue is predicted to bulge from a duplex formed with the low abundance U12 small nuclear ribonucleoprotein (snRNP), which we confirm by psoralen cross-linking. Native gel electrophoresis reveals that U11, U12, and U5 snRNPs assemble onto the P120 pre-mRNA to form splicing complexes. Inhibition of P120 splicing by 2'-O-methyl oligonucleotides complementary to U12 or U5 demonstrates that U12 and U5 snRNPs perform essential roles in the AT-AC spliceosome.},
+	author = {Tarn, Woan Yuh and Steitz, Joan A.},
+	doi = {10.1016/S0092-8674(00)81057-0},
+	file = {:Users/jack/Downloads/Papers/1-s2.0-S0092867400810570-main.pdf:pdf},
+	isbn = {0092-8674 (Print)$\backslash$r0092-8674 (Linking)},
+	issn = {00928674},
+	journal = {Cell},
+	number = {5},
+	pages = {801--811},
+	pmid = {8625417},
+	title = {{A novel spliceosome containing U11, U12, and U5 snRNPs excises a minor class (AT-AC) intron in vitro}},
+	volume = {84},
+	year = {1996}
+}
+@article{Neumann2012,
+	abstract = {Accumulation of the DNA/RNA binding protein fused in sarcoma (FUS) as inclusions in neurons and glia is the pathological hallmark of amyotrophic lateral sclerosis patients with mutations in FUS (ALS-FUS) as well as in several subtypes of frontotemporal lobar degeneration (FTLD-FUS), which are not associated with FUS mutations. Despite some overlap in the phenotype and neuropathology of FTLD-FUS and ALS-FUS, significant differences of potential pathomechanistic relevance were recently identified in the protein composition of inclusions in these conditions. While ALS-FUS showed only accumulation of FUS, inclusions in FTLD-FUS revealed co-accumulation of all members of the FET protein family, that include FUS, Ewing's sarcoma (EWS) and TATA-binding protein-associated factor 15 (TAF15) suggesting a more complex disturbance of transportin-mediated nuclear import of proteins in FTLD-FUS compared to ALS-FUS. To gain more insight into the mechanisms of inclusion body formation, we investigated the role of Transportin 1 (Trn1) as well as 13 additional cargo proteins of Transportin in the spectrum of FUS-opathies by immunohistochemistry and biochemically. FUS-positive inclusions in six ALS-FUS cases including four different mutations did not label for Trn1. In sharp contrast, the FET-positive pathology in all FTLD-FUS subtypes was also strongly labeled for Trn1 and often associated with a reduction in the normal nuclear staining of Trn1 in inclusion bearing cells, while no biochemical changes of Trn1 were detectable in FTLD-FUS. Notably, despite the dramatic changes in the subcellular distribution of Trn1 in FTLD-FUS, alterations of its cargo proteins were restricted to FET proteins and no changes in the normal physiological staining of 13 additional Trn1 targets, such as hnRNPA1, PAPBN1 and Sam68, were observed in FTLD-FUS. These data imply a specific dysfunction in the interaction between Trn1 and FET proteins in the inclusion body formation in FTLD-FUS. Moreover, the absence of Trn1 in ALS-FUS provides further evidence that ALS-FUS and FTLD-FUS have different underlying pathomechanisms.},
+	author = {Neumann, Manuela and Valori, Chiara F. and Ansorge, Olaf and Kretzschmar, Hans A. and Munoz, David G. and Kusaka, Hirofumi and Yokota, Osamu and Ishihara, Kenji and Ang, Lee Cyn and Bilbao, Juan M. and MacKenzie, Ian R.A.},
+	doi = {10.1007/s00401-012-1020-6},
+	file = {:Users/jack/Downloads/Papers/Neumann2012{\_}Article{\_}Transportin1AccumulatesSpecifi.pdf:pdf},
+	isbn = {1432-0533 (Electronic)$\backslash$r0001-6322 (Linking)},
+	issn = {00016322},
+	journal = {Acta Neuropathologica},
+	keywords = {Amyotrophic lateral sclerosis,EWS,FUS,Frontotemporal dementia,TAF15,Transportin},
+	number = {5},
+	pages = {705--716},
+	pmid = {22842875},
+	title = {{Transportin 1 accumulates specifically with FET proteins but no other transportin cargos in FTLD-FUS and is absent in FUS inclusions in ALS with FUS mutations}},
+	volume = {124},
+	year = {2012}
+}
+
 @article{Sareen2013,
 	abstract = {Amyotrophic lateral sclerosis (ALS) is a severe neurodegenerative condition characterized by loss of motor neurons in the brain and spinal cord. Expansions of a hexanucleotide repeat (GGGGCC) in the noncoding region of the C9ORF72 gene are the most common cause of the familial form of ALS (C9-ALS), as well as frontotemporal lobar degeneration and other neurological diseases. How the repeat expansion causes disease remains unclear, with both loss of function (haploinsufficiency) and gain of function (either toxic RNA or protein products) proposed. We report a cellular model of C9-ALS with motor neurons differentiated from induced pluripotent stem cells (iPSCs) derived from ALS patients carrying the C9ORF72 repeat expansion. No significant loss of C9ORF72 expression was observed, and knockdown of the transcript was not toxic to cultured human motor neurons. Transcription of the repeat was increased, leading to accumulation of GGGGCC repeat-containing RNA foci selectively in C9-ALS iPSC-derived motor neurons. Repeat-containing RNA foci colocalized with hnRNPA1 and Pur-$\alpha$, suggesting that they may be able to alter RNA metabolism. C9-ALS motor neurons showed altered expression of genes involved in membrane excitability including DPP6, and demonstrated a diminished capacity to fire continuous spikes upon depolarization compared to control motor neurons. Antisense oligonucleotides targeting the C9ORF72 transcript suppressed RNA foci formation and reversed gene expression alterations in C9-ALS motor neurons. These data show that patient-derived motor neurons can be used to delineate pathogenic events in ALS.},
 	archivePrefix = {arXiv},
