--- a/thesis_master.tex
+++ b/thesis_master.tex
@@ -102,7 +102,7 @@
 %\input{Chapters/03_cryptic_exons.tex}
 %\input{Chapters/04_fus_mice.tex}
 %\input{Chapters/05_tdp_mice.tex}
-%\input{Chapters/06_fus_meta.tex}
+\input{Chapters/06_fus_meta.tex}
 %\input{Chapters/07_discussion.tex}
 
 
