--- a/Bibliography/thesis_references.bib
+++ b/Bibliography/thesis_references.bib
@@ -5006,6 +5006,17 @@ BibTeX export options can be customized via Preferences -> BibTeX in Mendeley De
 	year = {2017}
 }
 
+@article{Modigliani2014,
+	author = {Modigliani, Stefano Dini and Morlando, Mariangela and Errichelli, Lorenzo and Sabatelli, Mario and Bozzoni, Irene},
+	doi = {10.1038/ncomms5335},
+	file = {:Users/jack/Downloads/Papers/ncomms5335.pdf:pdf},
+	journal = {Nature Communications},
+	number = {4335},
+	title = {{An ALS-associated mutation in the FUS 3'-UTR disrupts a microRNA–FUS regulatory circuitry}},
+	volume = {5},
+	year = {2014}
+}
+
 @article{Errichelli2017,
 	abstract = {The RNA-binding protein FUS participates in several RNA biosynthetic processes and has been linked to the pathogenesis of amyotrophic lateral sclerosis (ALS) and frontotemporal dementia. Here we report that FUS controls back-splicing reactions leading to circular RNA (circRNA) production. We identified circRNAs expressed in in vitro-derived mouse motor neurons (MNs) and determined that the production of a considerable number of these circRNAs is regulated by FUS. Using RNAi and overexpression of wild-type and ALS-associated FUS mutants, we directly correlate the modulation of circRNA biogenesis with alteration of FUS nuclear levels and with putative toxic gain of function activities. We also demonstrate that FUS regulates circRNA biogenesis by binding the introns flanking the back-splicing junctions and that this control can be reproduced with artificial constructs. Most circRNAs are conserved in humans and specific ones are deregulated in human-induced pluripotent stem cell-derived MNs carrying the FUS(P525L) mutation associated with ALS.},
 	author = {Errichelli, Lorenzo and {Dini Modigliani}, Stefano and Laneve, Pietro and Colantoni, Alessio and Legnini, Ivano and Capauto, Davide and Rosa, Alessandro and {De Santis}, Riccardo and Scarf{\`{o}}, Rebecca and Peruzzi, Giovanna and Lu, Lei and Caffarelli, Elisa and Shneider, Neil A. and Morlando, Mariangela and Bozzoni, Irene},
