--- a/thesis_master.tex
+++ b/thesis_master.tex
@@ -97,13 +97,13 @@
 
 % CONTENT
 
-%\input{Chapters/01_introduction.tex}
-%\input{Chapters/02_methods.tex}
-%\input{Chapters/03_cryptic_exons.tex}
-%\input{Chapters/04_fus_mice.tex}
-%\input{Chapters/05_tdp_mice.tex}
+\input{Chapters/01_introduction.tex}
+\input{Chapters/02_methods.tex}
+\input{Chapters/03_cryptic_exons.tex}
+\input{Chapters/04_fus_mice.tex}
+\input{Chapters/05_tdp_mice.tex}
 \input{Chapters/06_fus_meta.tex}
-%\input{Chapters/07_discussion.tex}
+\input{Chapters/07_discussion.tex}
 
 
 
@@ -114,10 +114,10 @@
 
 % APPENDICES!!!
 
-%\input{Chapters/appendices.tex}
+\input{Chapters/appendices.tex}
 
 % PUBLICATIONS - leave out for github
-%\input{Chapters/publications.tex}
+\input{Chapters/publications.tex}
 
 \cleardoublepage
 \end{document}
